plpgsql/grammar.js
    source_file: $ => seq(
      optional($.comp_options),
      $.pl_block,
      optional(';')
    ),

    // ── Compiler options ──────────────────────────────────────────────────────
    // #option dump / #print_strict_params on|off / #variable_conflict ...
    pl_block: $ => seq(
      optional($.block_label),
      optional($.decl_sect),
      $.kw_begin,
      optional($.proc_sect),
      optional($.exception_sect),
      $.kw_end,
      optional($.end_label)
    ),

    block_label: $ => seq('<<', $.identifier, '>>'),

    end_label: $ => $.any_identifier,

    // ── Declaration section ───────────────────────────────────────────────────
    decl_sect: $ => seq(
      $.kw_declare,
      repeat($.decl_stmt)
    ),

    decl_stmt: $ => choice(
      $.decl_statement,
      $.kw_declare  // extra DECLARE is allowed
    ),

    decl_statement: $ => choice(
      // Alias declaration: name ALIAS FOR target ;
      // Must precede variable declaration so ALIAS is not consumed as a type name.
      // The target may be an identifier or a positional parameter ($1, $2, ...).
      seq($.decl_varname, $.kw_alias, $.kw_for, choice($.any_identifier, $.param), ';'),
      // Variable declaration: name [CONSTANT] type [COLLATE collation] [NOT NULL] [DEFAULT|:=|= expr] ;
      seq(
        $.decl_varname,
        optional($.kw_constant),
        $.decl_datatype,
        optional($.decl_collate),
        optional(seq($.kw_not, $.kw_null)),
        optional($.decl_defval),
        ';'
      ),
      // Cursor declaration: name [NO SCROLL | SCROLL] CURSOR [(args)] FOR|IS query ;
      seq(
        $.decl_varname,
        optional($.opt_scrollable),
        $.kw_cursor,
        optional($.decl_cursor_args),
        choice($.kw_is, $.kw_for),
        $._sql_semicolon_expr,
        ';'
      )
    ),

    decl_varname: $ => choice(
      $.identifier,
      $.unreserved_keyword
    ),

    decl_datatype: $ => $.type_name,

    // Type names — simplified; covers most PL/pgSQL usage
    type_name: $ => choice(
      // variable%TYPE / table.column%TYPE
      seq($.dotted_name, '%', $.kw_type),
      // variable%ROWTYPE / table%ROWTYPE
      seq($.dotted_name, '%', $.kw_rowtype),
      // Regular type: name or schema.name, with optional multi-word modifiers
      // (e.g. `character varying`, `double precision`, `timestamp with time
      // zone`), precision specifiers, and array modifiers. Trailing words are
      // plain identifiers, so this stops at keyword terminators such as
      // DEFAULT, NOT NULL, and COLLATE.
      seq(
        $.dotted_name,
        repeat(choice(
          $.identifier,
          seq('(', $.integer_literal, optional(seq(',', $.integer_literal)), ')')
        )),
        repeat(seq('[', optional($.integer_literal), ']'))
      )
    ),

    dotted_name: $ => seq(
      $.any_identifier,
      repeat(seq('.', $.any_identifier))
    ),

    decl_defval: $ => seq(
      choice('=', ':=', $.kw_default),
      $._sql_semicolon_expr
    ),

    proc_sect: $ => repeat1($.proc_stmt),

    proc_stmt: $ => choice(
      seq($.pl_block, ';'),
      $.stmt_assign,
      $.stmt_if,
      $.stmt_case,
      $.stmt_loop,
      $.stmt_while,
      $.stmt_for,
      $.stmt_foreach_a,
      $.stmt_exit,
      $.stmt_return,
      $.stmt_raise,
      $.stmt_assert,
      $.stmt_execsql,
      $.stmt_dynexecute,
      $.stmt_perform,
      $.stmt_call,
      $.stmt_getdiag,
      $.stmt_open,
      $.stmt_fetch,
      $.stmt_move,
      $.stmt_close,
      $.stmt_null,
      $.stmt_commit,
      $.stmt_rollback
    ),

    // ── Assignment ────────────────────────────────────────────────────────────
    // The target is consumed by the external scanner (it stops at := and =).
    // We use prec.dynamic to prefer assignments over exec SQL.
    stmt_if: $ => seq(
      $.kw_if, $._sql_then_expr, $.kw_then,
      optional($.proc_sect),
      repeat($.elsif_clause),
      optional($.else_clause),
      $.kw_end, $.kw_if, ';'
    ),

    elsif_clause: $ => seq(
      $.kw_elsif, $._sql_then_expr, $.kw_then,
      optional($.proc_sect)
    ),

    else_clause: $ => seq(
      $.kw_else,
      optional($.proc_sect)
    ),

    // ── CASE ──────────────────────────────────────────────────────────────────
    stmt_case: $ => seq(
      $.kw_case,
      optional($._sql_when_expr),
      repeat1($.case_when),
      optional(seq($.kw_else, optional($.proc_sect))),
      $.kw_end, $.kw_case, ';'
    ),

    case_when: $ => seq(
      $.kw_when, $._sql_then_expr, $.kw_then,
      optional($.proc_sect)
    ),

    // ── LOOP ──────────────────────────────────────────────────────────────────
    stmt_loop: $ => seq(
      optional($.loop_label),
      $.kw_loop,
      $.loop_body
    ),

    // ── WHILE ─────────────────────────────────────────────────────────────────
    loop_label: $ => seq('<<', $.identifier, '>>'),
    loop_body: $ => seq(
      optional($.proc_sect),
      $.kw_end, $.kw_loop,
      optional($.any_identifier),
      ';'
    ),

    // ── EXIT/CONTINUE ─────────────────────────────────────────────────────────
    stmt_exit: $ => seq(
      choice($.kw_exit, $.kw_continue),
      optional($.any_identifier),
      optional(seq($.kw_when, $._sql_semicolon_expr)),
      ';'
    ),

    // ── RETURN ────────────────────────────────────────────────────────────────
    stmt_raise: $ => seq(
      $.kw_raise,
      optional($.raise_level),
      optional(choice(
        // Format string with parameters
        seq($.string_literal, repeat(seq(',', $._sql_comma_using_or_semicolon_expr))),
        // Condition name
        $.any_identifier,
        // SQLSTATE 'xxxxx'
        seq($.kw_sqlstate, $.string_literal)
      )),
      optional(seq($.kw_using, $.raise_option, repeat(seq(',', $.raise_option)))),
      ';'
    ),

    raise_level: $ => choice(
      $.kw_exception,
      $.kw_warning,
      $.kw_notice,
      $.kw_info,
      $.kw_log,
      $.kw_debug
    ),

    stmt_open: $ => seq(
      $.kw_open,
      $._cursor_variable,
      optional(choice(
        // Unbound cursor: OPEN cur [NO SCROLL | SCROLL] FOR query|EXECUTE expr
        seq(
          optional($.opt_scrollable),
          $.kw_for,
          choice(
            seq($.kw_execute, $._sql_using_or_semicolon_expr,
                optional(seq($.kw_using, $._sql_comma_or_semicolon_expr, repeat(seq(',', $._sql_comma_or_semicolon_expr))))),
            // guarded so EXECUTE lexes as the keyword above
            $._sql_semicolon_guarded_expr
          )
        ),
        // Bound cursor: OPEN cur (args)
        seq('(', $._sql_comma_rparen_expr, repeat(seq(',', $._sql_comma_rparen_expr)), ')')
      )),
      ';'
    ),

    // ── FETCH ─────────────────────────────────────────────────────────────────
    // FETCH [direction] [FROM] cursor INTO target ;
    stmt_fetch: $ => seq(
      $.kw_fetch,
      optional($.fetch_direction),
      optional($.kw_from),
      $._cursor_variable,
      $.kw_into,
      $.into_target,
      ';'
    ),

    // ── MOVE ──────────────────────────────────────────────────────────────────
    stmt_move: $ => seq(
      $.kw_move,
      optional($.fetch_direction),
      $._cursor_variable,
      ';'
    ),

    fetch_direction: $ => choice(
      $.kw_next,
      $.kw_prior,
      $.kw_first,
      $.kw_last,
      seq($.kw_absolute, $._sql_from_or_into_expr),
      seq($.kw_relative, $._sql_from_or_into_expr),
      $.kw_forward,
      $.kw_backward,
      seq($.kw_forward, choice($.integer_literal, $.kw_all)),
      seq($.kw_backward, choice($.integer_literal, $.kw_all))
    ),

    // ── CLOSE ─────────────────────────────────────────────────────────────────
    stmt_close: $ => seq($.kw_close, $._cursor_variable, ';'),

    // pl_gram.y cursor_variable is T_DATUM: any variable in scope, including a
    // positional parameter such as $1. The refcursor type check is semantic.
    _cursor_variable: $ => choice($.any_identifier, $.param),

    // ── NULL statement ────────────────────────────────────────────────────────
    stmt_null: $ => seq($.kw_null, ';'),

    // ── COMMIT/ROLLBACK ───────────────────────────────────────────────────────
    into_target: $ => seq(
      $.any_identifier,
      repeat(seq(',', $.any_identifier))
    ),

    // ── Exception handling ────────────────────────────────────────────────────
    _sql_semicolon_expr: $ => alias($._sql_until_semicolon, $.sql_expression),
    _sql_then_expr: $ => alias($._sql_until_then, $.sql_expression),
    _sql_when_expr: $ => alias($._sql_until_when, $.sql_expression),
    _sql_using_or_semicolon_expr: $ => alias($._sql_until_using_or_semicolon, $.sql_expression),
    _sql_comma_or_semicolon_expr: $ => alias($._sql_until_comma_or_semicolon, $.sql_expression),
    _sql_comma_using_or_semicolon_expr: $ => alias($._sql_until_comma_using_or_semicolon, $.sql_expression),
    _sql_comma_rparen_expr: $ => alias($._sql_until_comma_or_rparen, $.sql_expression),
    _sql_from_or_into_expr: $ => alias($._sql_until_from_or_into, $.sql_expression),
    _sql_semicolon_guarded_expr: $ => alias($._sql_until_semicolon_guarded, $.sql_expression),

    // ── Common helpers ────────────────────────────────────────────────────────
    any_identifier: $ => choice(
      $.identifier,
      $.unreserved_keyword
    ),

    // ── Keyword category lists ────────────────────────────────────────────────

    kw_begin: _ => token(prec(1, /[bB][eE][gG][iI][nN]/)),
    kw_case: _ => token(prec(1, /[cC][aA][sS][eE]/)),
    kw_declare: _ => token(prec(1, /[dD][eE][cC][lL][aA][rR][eE]/)),
    kw_else: _ => token(prec(1, /[eE][lL][sS][eE]/)),
    kw_end: _ => token(prec(1, /[eE][nN][dD]/)),
    kw_for: _ => token(prec(1, /[fF][oO][rR]/)),
    kw_from: _ => token(prec(1, /[fF][rR][oO][mM]/)),
    kw_if: _ => token(prec(1, /[iI][fF]/)),
    kw_into: _ => token(prec(1, /[iI][nN][tT][oO]/)),
    kw_loop: _ => token(prec(1, /[lL][oO][oO][pP]/)),
    kw_not: _ => token(prec(1, /[nN][oO][tT]/)),
    kw_null: _ => token(prec(1, /[nN][uU][lL][lL]/)),
    kw_then: _ => token(prec(1, /[tT][hH][eE][nN]/)),
    kw_using: _ => token(prec(1, /[uU][sS][iI][nN][gG]/)),
    kw_when: _ => token(prec(1, /[wW][hH][eE][nN]/)),
    kw_absolute: _ => token(prec(1, /[aA][bB][sS][oO][lL][uU][tT][eE]/)),
    kw_alias: _ => token(prec(1, /[aA][lL][iI][aA][sS]/)),
    kw_close: _ => token(prec(1, /[cC][lL][oO][sS][eE]/)),
    kw_constant: _ => token(prec(1, /[cC][oO][nN][sS][tT][aA][nN][tT]/)),
    kw_continue: _ => token(prec(1, /[cC][oO][nN][tT][iI][nN][uU][eE]/)),
    kw_default: _ => token(prec(1, /[dD][eE][fF][aA][uU][lL][tT]/)),
    kw_elsif: _ => token(prec(1, choice(/[eE][lL][sS][eE][iI][fF]/, /[eE][lL][sS][iI][fF]/))),
    kw_execute: _ => token(prec(1, /[eE][xX][eE][cC][uU][tT][eE]/)),
    kw_exit: _ => token(prec(1, /[eE][xX][iI][tT]/)),
    kw_fetch: _ => token(prec(1, /[fF][eE][tT][cC][hH]/)),
    kw_move: _ => token(prec(1, /[mM][oO][vV][eE]/)),
    kw_next: _ => token(prec(1, /[nN][eE][xX][tT]/)),
    kw_notice: _ => token(prec(1, /[nN][oO][tT][iI][cC][eE]/)),
    kw_open: _ => token(prec(1, /[oO][pP][eE][nN]/)),
    kw_raise: _ => token(prec(1, /[rR][aA][iI][sS][eE]/)),
    kw_rowtype: _ => token(prec(1, /[rR][oO][wW][tT][yY][pP][eE]/)),
    kw_type: _ => token(prec(1, /[tT][yY][pP][eE]/)),
    identifier: _ => token(prec(0, /[a-zA-Z_\u0080-\u00ff][a-zA-Z0-9_$\u0080-\u00ff]*/)),

    // Positional parameter reference ($1, $2, ...) — used as an ALIAS target.
    param: _ => token(/\$[0-9]+/),

    integer_literal: _ => token(/[0-9](_?[0-9])*/),

    string_literal: _ => token(/'([^']|'')*'/),
